# tf-simple-metric-learning

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  pytest.yml
examples/: train_car196.ipynb  train_cub200.ipynb
tests/: test_layers.py  test_tf_circleloss.py  test_tf_circleloss_class.py  test_tf_circleloss_class_valid.py  test_torch.py  test_torch_circleloss.py
tf_simple_metric_learning/: layers.py  losses.py  test_tf.py  test_tf_circleloss.py  test_torch.py  test_torch_circleloss_class.py
