[tool.poetry]
name = "tf-simple-metric-learning"
version = "0.1.1"
description = "Metric learning layers with tf.keras"
authors = ["Daigo Hirooka <daigo.hirooka@gmail.com>"]
repository = "https://github.com/daigo0927/tf-simple-metric-learning"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.3.0"
tensorflow-probability = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
